--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -40,12 +40,10 @@
 /* VRSTVA PRO VAŠE STYLY */
 @layer design {
     .page__header {
-        justify-content: center;
         background-image: url(../images/header-2560w.jpg);
         background-size: cover;
         background-position: button left;
         height: 80vh;
-        position: relative;
     }
     .img-responsive{
         display: block;
@@ -53,21 +51,29 @@
         height: auto;      
     }
     .page__intro {
+        display: block;
+        width: 100%;
         color: var(--light);
-        padding: 1em;
-        position: absolute;
-        bottom: 0px;
-        right: 0px;
+        padding: 4vw;
+        margin-top: 2vw;
+        
+    }
+    .intro__text{
+        max-width: 766px;
+        width: 95%;
     }
     
     h1 {
-        font-size: 64px;
+        font-size: 72px;
         font-weight: 800;
+        margin-bottom: 0.3em;
+        margin-top: 0.3em;
     }
     
     p, span {
         font-weight: 400;
         font-size: 16px;
+        line-height: 21.79px
     }
     
     h2{
@@ -83,8 +89,8 @@
         border-radius: 0.5em;
         padding-left: 2em;
         padding-right: 2em;
-        padding-top: 12px;
-        padding-bottom: 12px;
+        padding-top: 14px;
+        padding-bottom: 14px;
         text-decoration: none;
     }
 
@@ -100,5 +106,6 @@
     }
     .page__logo-container{
         text-align: center;
+        width: 100%;
     }
 }
