--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -27,8 +27,8 @@
         */
         background-image: url("../images/logo.svg");
         background-image: cover;
-        width: 4em;
-        height: 4em;
+        width: 2em;
+        height: 2em;
         font-size: 1.5em;
     }
     .page__logo > span {
@@ -42,8 +42,11 @@
     .page__header {
         background-image: url(../images/header-2560w.jpg);
         background-size: cover;
-        background-position: button left;
-        height: 80vh;
+        background-position: top left;
+        height: min(100vh, 800px);
+        display: flex;
+        align-content: space-between;
+        flex-wrap: wrap;
     }
     .img-responsive{
         display: block;
@@ -54,9 +57,9 @@
         display: block;
         width: 100%;
         color: var(--light);
-        padding: 4vw;
-        margin-top: 2vw;
-        
+        padding: 1em;
+        margin-left: 5vw;
+        margin-bottom: 5vw;
     }
     .intro__text{
         max-width: 766px;
@@ -77,11 +80,17 @@
     }
     
     h2{
-        font-size: 28px;
+        font-size: 36px;
+        margin-bottom: 1.2em;
     }
     
     h3 {
         font-size: 18px;
+    }
+
+    figure{
+        margin-left: 0px;
+        margin-right: 0px;
     }
 
     .button{
@@ -107,5 +116,27 @@
     .page__logo-container{
         text-align: center;
         width: 100%;
+    }
+    .page__content{
+        padding-left: 5vw;
+        padding-right: 5vw;
+        width: min(960px, 90vw);
+        margin: auto;
+        padding-top: 3em;
+    }
+    .img__figcaption{
+        text-align: center;
+        font-size: 14px;
+        margin: 1em;
+    }
+    .page__subtitle{
+        display: block;
+        font-size: 20px;
+        margin-bottom: 1em;
+    }
+    .element--highlight{
+        border: 3px, solid, var(--primary);
+        margin-top: 2em;
+        padding: 2em;
     }
 }
